[package]
name = "myssh"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
russh = "0.46"
russh-keys = "0.46"
async-trait = "0.1"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
regex-lite = "0.1"
clap = { version = "4", features = ["derive"] }
rustyline = "14"
base64 = "0.22"
lazy_static = "1.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
